"fixing alignment"

--- a/src/style.css
+++ b/src/style.css
@@ -105,7 +105,7 @@ input#textBar {
 
 #selected-options {
     width: 510px;
-    margin: 10px 0px 20px 185px;
+    margin: 10px 0px 20px 173px;
 
     display: flex;
     justify-content: flex-start;
